nlb-2-nodes/lb.tf
resource "aws_lb" "lb" {
  name               = "${var.prefix}-rancher"
  internal           = var.lb_internal
  load_balancer_type = "network"
  subnets = data.aws_subnet_ids.default.ids
}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.lb.arn
  port              = "443"
  protocol          = "TCP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.https.arn
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.lb.arn
  port              = "80"
  protocol          = "TCP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.http.arn
  }
}
